--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,17 @@
-.student {
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 2em;
-    padding: 10%;
-    border: 1px solid hsla(0, 0%, 50%, 0.8);
+.welcome-message {
+    font-size: 2.5em;
+    background-color: hsl(120, 100%, 42%);
+    color: aliceblue;
+    padding: 10px;
+    border-radius: 5px;
+    margin: 0;
 }
 
-.student p{
+.login-prompt {
+    font-size: 2.5em;
+    background-color: hsl(0, 94%, 49%);
+    color: aliceblue;
+    padding: 10px;
+    border-radius: 5px;
     margin: 0;
 }
