--- a/src/index.css
+++ b/src/index.css
@@ -1,17 +1,24 @@
-.welcome-message {
+.list-category {
     font-size: 2.5em;
-    background-color: hsl(120, 100%, 42%);
-    color: aliceblue;
-    padding: 10px;
+    font-weight: bold;
+    color: hsl(0, 0%, 20%);
+    margin-bottom: 10px;
+    text-align: center;
+    border: 3px solid;
     border-radius: 5px;
-    margin: 0;
+    background-color: aqua;
 }
 
-.login-prompt {
-    font-size: 2.5em;
-    background-color: hsl(0, 94%, 49%);
-    color: aliceblue;
-    padding: 10px;
-    border-radius: 5px;
+.list-items li {
+    font-size: 2em;
+    list-style: none;
+    color: hsl(0, 05, 25%);
+    text-align: center;
     margin: 0;
+
+}
+
+.list-items li:hover {
+    color: hsl(0, 0%, 45%);
+    cursor: pointer;
 }
